Fixed html example imports

--- a/examples/index.html
+++ b/examples/index.html
@@ -68,7 +68,7 @@ const Tags = function ({tags}) {
     </p>
 
 
-    <pre><code class="language-jsx">import {Table, Column} from ReactTisch;
+    <pre><code class="language-jsx">import {Table, Column} from "react-tisch";
 
 &lt;Table data={sampleData}&gt;
     &lt;Column value={row => row.name}&gt;Name&lt;/Column&gt;
@@ -89,7 +89,7 @@ const Tags = function ({tags}) {
         getFilterOptions and getVisibleRows. Refer to the documentation for more details.
     </p>
 
-    <pre><code class="language-jsx">import {Table, Column} from ReactTisch;
+    <pre><code class="language-jsx">import {Table, Column} from "react-tisch";
 
 const dataManager = {
     // Note: visibleRows should take into account the state (searchText, selectedFilters, etc). Refer to the
