--- a/examples/index.html
+++ b/examples/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>react-tisch</title>
-
-    <!-- Include prism for JSX syntax highlighting -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-jsx.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+    <title>react-tisch sample</title>
 
     <!-- Include React -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.0/react.min.js"></script>
@@ -17,138 +12,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.2/react-bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
+    <!-- Include react-tisch library -->
     <script src="../dist/react-tisch.js"></script>
-    <script src="../assets/sample_data.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js"></script>
-    <style>
-        h5 {
-            margin-top: 30px;
-        }
-    </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>react-tisch</h1>
-    <h2><a href="https://github.com/kayak/react-tisch">View project on GitHub</a></h2>
-    <hr>
-    <h3>Simple example</h3>
-
-    <p>Building a react-tisch table is easy, you only need 3 things.</p>
-
-    <h5>1. The data</h5>
-    <pre><code class="language-jsx">const sampleData = [
-  {
-    "name": "Ida Roach",
-    "eyeColor": "blue",
-    "tags": ["magna", "in", "labore", "aliqua", "veniam"]
-  },
-  ...
-];</code></pre>
-
-    <h5>2. Cell definitions</h5>
-    <p>One of react-tisch main strengths is that you can use react components in the table's cells.</p>
-    <pre><code class="language-jsx">import {Glyphicon, Label} from ReactBootstrap;
-
-const EyeColor = function ({eyeColor}) {
-    return &lt;Glyphicon glyph="eye-open" style={{color: eyeColor}}/&gt;
-};
-
-const Tags = function ({tags}) {
-    return &lt;div&gt;{tags.map((tag, i) =>
-            &lt;Label bsStyle="default" key={i}&gt;{tag}&lt;/Label&gt;)}&lt;/div&gt;
-};</code></pre>
-
-    <h5>3. Table definition</h5>
-    <p>
-        To define the react-tisch table, you need to render the Table component with Column components as immediate
-        children.The Column component should contain the column title (which can also be a react component), and need
-        at least to have the prop "value", which is a function taking the row as argument and returning the cell value.
-    </p>
-
-
-    <pre><code class="language-jsx">import {Table, Column} from "react-tisch";
-
-&lt;Table data={sampleData}&gt;
-    &lt;Column value={row => row.name}&gt;Name&lt;/Column&gt;
-    &lt;Column filter value={EyeColor} rawValue={row => row.eyeColor}&gt;Eye color&lt;/Column&gt;
-    &lt;Column value={Tags}&gt;Tags&lt;/Column&gt;
-&lt;/Table></code></pre>
-
-    <h5>Result</h5>
-    <hr>
-
-    <div id="example"></div>
-    <hr>
-
-    <h3>Custom data manager</h3>
-    <p>
-        You can define your own data manager or extend the existing one to change any of the default behaviour. Instead
-        of passing a data prop, simply pass a dataManager prop. It needs to have three methods: getItemCount,
-        getFilterOptions and getVisibleRows. Refer to the documentation for more details.
-    </p>
-
-    <pre><code class="language-jsx">import {Table, Column} from "react-tisch";
-
-const dataManager = {
-    // Note: visibleRows should take into account the state (searchText, selectedFilters, etc). Refer to the
-    // documentation for more details.
-    getData: (state) => ({
-        itemCount: 2,
-        filterOptions: [[]],
-        visibleRows: [{index: 0, data: {name: 'Joe'}}, {index: 1, data: {name: 'Mike'}}]
-    })
-};
-
-&lt;Table dataManager={dataManager}&gt;
-    &lt;Column value={row => row.name}&gt;Name&lt;/Column&gt;
-&lt;/Table&gt;
-</code></pre>
-
-    <hr>
-    <div id="example2"></div>
-    <hr>
-
-    <small>Copyright © 2016 KAYAK Germany, GmbH.</small>
-</div>
-
-<script type="text/babel">
-    let {Table, Column} = ReactTisch;
-    let {Glyphicon, Label} = ReactBootstrap;
-
-    const EyeColor = function ({eyeColor}) {
-        return <Glyphicon glyph="eye-open" style={{color: eyeColor}}/>;
-    };
-
-    const Tags = function ({tags}) {
-        return <div>{tags.map((tag, i) =>
-                <Label bsStyle="default" key={i}>{tag}</Label>)}</div>;
-    };
-
-    ReactDOM.render(
-            <Table data={sampleData}>
-                <Column value={row => row.name}>Name</Column>
-                <Column filter value={EyeColor} rawValue={row => row.eyeColor}>Eye color</Column>
-                <Column value={Tags}>Tags</Column>
-            </Table>,
-            document.getElementById('example')
-    );
-
-    const dataManager = {
-        getData: (state) => ({
-            itemCount: 2,
-            filterOptions: [[]],
-            visibleRows: [{index: 0, data: {name: 'Joe'}}, {index: 1, data: {name: 'Mike'}}]
-        })
-    };
-
-    ReactDOM.render(
-            <Table dataManager={dataManager}>
-                <Column value={row => row.name}>Name</Column>
-            </Table>,
-            document.getElementById('example2')
-    )
-</script>
+<div class="container" id="examples-container"></div>
+<!-- Include sample react app -->
+<script src="./sampleApp.js"></script>
 </body>
 </html>
