Add demo to documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,6 @@
 
 <div class="container" id="examples-container"></div>
 <!-- Include sample react app -->
-<script src="./sampleApp.js"></script>
+<script src="./demo.js"></script>
 </body>
 </html>
