Update redirect to documentation

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=examples/index.html" />
     <script type="text/javascript">
-        window.location.href = "examples/index.html"
+        window.location.href = "https://kayak.gitbooks.io/react-tisch/content/"
     </script>
     <title>react-tisch</title>
 </head>
 <body>
-    See <a href="examples/index.html">examples</a>.
+    See <a href="https://kayak.gitbooks.io/react-tisch/content/">the documentation</a>.
 </body>
 </html>
