--- a/demo/index.html
+++ b/demo/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
     <!-- Include react-tisch library -->
-    <script src="../dist/react-tisch.js"></script>
+    <script src="https://kayak.github.io/react-tisch/dist/react-tisch.js"></script>
 
 </head>
 <body>
 
-<div class="container" id="examples-container"></div>
+<div class="container" id="examples-container" style="width:800px; padding-top: 20px"></div>
 <!-- Include sample react app -->
-<script src="./demo.js"></script>
+<script src="https://kayak.github.io/react-tisch/demo/demo.js"></script>
 </body>
 </html>
